--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           pip install .
           pip install .[dev]
+          pip install setuptools wheel twine
 
       - name: Lint
         run: make lintgit
